--- a/sections/studyarea001.tex
+++ b/sections/studyarea001.tex
@@ -22,8 +22,8 @@ As an essential agricultural region accounting for approximately 35\% of Taiwan'
 	% Left large subfigure (A) - takes up left half, full height
 	\begin{subfigure}[b]{0.48\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{figures/studyarea_dpi150.png}
-%		\framebox{\rule{0pt}{10cm}\rule{\textwidth}{0pt}}
+%		\includegraphics[width=\textwidth]{figures/studyarea_dpi150.png}
+		\framebox{\rule{0pt}{10cm}\rule{\textwidth}{0pt}}
 %		\caption{}
 		\label{fig:studyarea_a}
 	\end{subfigure}
@@ -33,8 +33,8 @@ As an essential agricultural region accounting for approximately 35\% of Taiwan'
 		% Top right subfigure (B)
 		\begin{subfigure}[b]{\textwidth}
 			\centering
-			\includegraphics[width=\textwidth]{figures/crossection_new_lowres.jpg}
-%			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
+%			\includegraphics[width=\textwidth]{figures/crossection_new_lowres.jpg}
+			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
 %			\caption{}
 			\label{fig:studyarea_b}
 		\end{subfigure}
@@ -44,8 +44,8 @@ As an essential agricultural region accounting for approximately 35\% of Taiwan'
 		% Middle right subfigure (C)
 		\begin{subfigure}[b]{\textwidth}
 			\centering
-			\includegraphics[width=\textwidth]{figures/legend_new_lowres.png}
-%			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
+%			\includegraphics[width=\textwidth]{figures/legend_new_lowres.png}
+			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
 %			\caption{}
 			\label{fig:studyarea_c}
 		\end{subfigure}
