edit: data set MLCW 2025-07-31

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 % ===================================================================
 % -- Mathematics --
 \usepackage{amsmath}     % Essential for advanced math typesetting. Recommended with newtxmath.
+\usepackage{siunitx}
 % \usepackage{amssymb,amsthm} % Enable if you need extra symbols or theorem environments
 % \usepackage{bm}        % Enable for bold math symbols, e.g., \bm{v}
 
@@ -26,6 +27,7 @@
 \usepackage{float}       % Provides the [H] placement option for figures
 \usepackage{caption}     % Required by subcaption for customizing captions
 \usepackage{subcaption}  % For creating subfigures and subtables (e.g., Figure 1a, 1b)
+\usepackage{makecell}
 
 % ===================================================================
 % 4. PAGE LAYOUT, SPACING, AND FORMATTING
