--- a/main_elsevier.tex
+++ b/main_elsevier.tex
@@ -25,12 +25,14 @@
 
 % -- Mathematics --
 \usepackage{amsmath}     % Essential for advanced math typesetting.
+\usepackage{siunitx}
 
 % -- Figures, Tables, and Captions --
 \usepackage{graphicx}    % For including images with \includegraphics
 \usepackage{booktabs}    % For professional-quality tables (e.g., \toprule, \midrule)
 \usepackage{float}       % Provides the [H] placement option for figures
 \usepackage{subcaption}  % For creating subfigures and subtables
+\usepackage{makecell}
 
 % -- Hyperlinks and Cross-referencing --
 \usepackage{hyperref}
