--- a/ref_manu2.bib
+++ b/ref_manu2.bib
@@ -91,12 +91,20 @@
 	year = {2021}
 }
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-@techreport{RN46,
-	author = {Central Geological Survey},
-	title = {Project of groundwater monitoring network in Taiwan during first stage: Research report of Choushui River alluvial fan},
-	year = {1999},
-	type = {Report}
+@misc{RN46,
+	title={Project of groundwater monitoring network in Taiwan during first stage: Research report of Choushui River alluvial fan},
+	author={Central Geological Survey},
+	journal={Water Resources Bureau Report},
+	pages={130},
+	year={1999},
+	publisher={Ministry of Economic Affairs ROC}
 }
+%@techreport{RN46,
+%	author = {Central Geological Survey},
+%	title = {Project of groundwater monitoring network in Taiwan during first stage: Research report of Choushui River alluvial fan},
+%	year = {1999},
+%	type = {Report}
+%}
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 @article{RN17,
 	author = {Liu, Chih-Hsi and Pan, Yii-Wen and Liao, Jyh-Jong and Huang, Chen-Tair and Ouyang, Shoung},
@@ -334,6 +342,19 @@
 	abstract = {Effective water resource management requires accurate estimation of the volume of water withdrawn through anthropogenic groundwater pumping. However, insufficient pumping information makes accurate estimation difficult. To address this issue, this study proposes a novel method for estimating pumping volumes that does not rely on pumping information. The proposed method uses high-resolution groundwater level (GWL) data from densely monitored wells and integrates Hilbert–Huang transform and empirical orthogonal function analysis to extract pump-associated signals, which can then be used to estimate total pumping. Our method was validated by analyzing GWL data from monitoring stations on the Choshui River alluvial fan in Taiwan. The results indicate the estimated pumping amount of 1.71×109 – 2.05×109 m3/year consistent with previous estimates obtained using survey and physics-based methods ranging from 9×108 m3/year to 2.2×109 m3/year. In the areas with abundant groundwater head observations, the proposed method can efficiently estimate pumping rates with a high space–time resolution, and may serve as a useful reference for groundwater management.}
 }
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+@Article{my_paper,
+	AUTHOR = {Nguyen, Thai-Vinh-Truong and Ni, Chuen-Fa and Hsu, Ya-Ju and Chen, Pi-E Rubia and Hiep, Nguyen Hoang and Lee, I-Hsian and Lin, Chi-Ping and Gosselin, Gabriel},
+	TITLE = {Quantitative Evaluations of Pumping-Induced Land Subsidence and Mitigation Strategies by Integrated Remote Sensing and Site-Specific Hydrogeological Observations},
+	JOURNAL = {Remote Sensing},
+	VOLUME = {16},
+	YEAR = {2024},
+	NUMBER = {20},
+	ARTICLE-NUMBER = {3789},
+	URL = {https://www.mdpi.com/2072-4292/16/20/3789},
+	ISSN = {2072-4292},
+	ABSTRACT = {Land subsidence is an environmental hazard occurring gradually over time, potentially posing significant threats to the structural stability of civilian buildings and essential infrastructures. This study presented a workflow using the SBAS-PSInSAR approach to analyze surface deformation in the Choushui River Fluvial Plain (CRFP) based on Sentinel-1 SAR images and validated against precise leveling. Integrating the InSAR results with hydrogeological data, such as groundwater levels (GWLS), multilayer compactions, and borehole loggings, a straightforward model was proposed to estimate appropriate groundwater level drops to minimize further subsidence. The results showed a huge subsidence bowl centered in Yunlin, with maximal sinking at an average 60 mm/year rate. High-resolution subsidence maps enable the quantitative analyses of safety issues for Taiwan High-Speed Rail (THSR) across the areas with considerable subsidence. In addition, the analysis of hydrogeological data revealed that half of the major compaction in the study area occurred at shallow depths that mainly included the first and second aquifers. Based on a maximal subsidence control rate of 40 mm/year specified in the CRFP, the model results indicated that the groundwater level drops from wet to dry seasons needed to be maintained from 3 to 5 m for the shallowest aquifer and 4–6 m for Aquifers 3 and 4. The workflow demonstrated the compatibility of InSAR with traditional geodetic methods and the effectiveness of integrating multiple data sources to assess the complex nature of land subsidence in the CRFP.},
+	DOI = {10.3390/rs16203789}
+}
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
