add: GTWR model validation

--- a/sections/dataset001.tex
+++ b/sections/dataset001.tex
@@ -3,7 +3,7 @@
 \subsection{Multilayer Compaction}
 \label{subsubsec:mlcw}
 
-A multilayer compaction monitoring well (MLCW) is a specialized borehole extensometer that captures the subtle subsurface compaction by reading measurements at magnetic rings, strategically installed at boundaries between significant aquifers, or transitions between fine and coarse sedimentary materials, as defined by the Geological Survey and Mining Management Agency (GSMMA).  The depth of each MLCW often extends up to 300 m, with 21 to 26 magnetic rings anchored throughout the profile. Based on hydrogeological properties, aquifer units at each well are determined, each containing a number of corresponding magnetic rings, providing measurements of aquifer-specific compaction. The installation and measurement approaches of the MLCWs have been comprehensively described by \citep{Hung2021_MLCW}. In this study, 29 MLCWs were employed, with monthly data collected from April 2016 to November 2021.
+A multilayer compaction monitoring well (MLCW) is a specialized borehole extensometer that captures the subtle subsurface compaction by reading measurements at magnetic rings, strategically installed at boundaries between significant aquifers, or transitions between fine and coarse sedimentary materials, as defined by the Geological Survey and Mining Management Agency (GSMMA).  The depth of each MLCW often extends up to 300 m, with 21 to 26 magnetic rings anchored throughout the profile. Based on hydrogeological properties, aquifer units at each well are determined, each containing a number of corresponding magnetic rings, providing measurements of aquifer-specific compaction. The installation and measurement approaches of the MLCWs have been comprehensively described by \citep{Hung2021_MLCW}. In this study, 29 MLCWs were employed, with monthly data collected from April 2016 to November 2021.  The coordinates, elevation, and depth of the MLCWs are shown in \Cref{tab:mlcw_info}.
 
 % Add these lines to your document's preamble if they're not already there
 % \usepackage{siunitx}
@@ -16,7 +16,7 @@ A multilayer compaction monitoring well (MLCW) is a specialized borehole extenso
 	\setlength{\tabcolsep}{2.5pt}
 	\centering
 	\caption{Monitoring Well Locations, Elevations, and Bottom Depths}
-	\label{tab:mlcw_locations_sorted}
+	\label{tab:mlcw_info}
 	\begin{tabular}{llrrrr}
 		\hline
 		\textbf{No.} & \textbf{Station} & \textbf{Lon. (\si{\degree})} & \textbf{Lat. (\si{\degree})} & \textbf{Elev. (m)} & \textbf{\makecell{Bottom \\ Depth (m)}} \\
