--- a/main.tex
+++ b/main.tex
@@ -148,16 +148,16 @@ Land subsidence from excessive groundwater extraction has long affected the Chou
 \section{Introduction}
 \label{sec:intro}
 
-\section{Study Area Background}
+\section{Study Area \& Data sets}
 \label{sec:studyarea}
 \input{sections/studyarea001}
 
-\section{Data Sets}
+%\section{Data Sets}
 \label{sec:dataset}
 \input{sections/dataset001}
 
 %\section{Methodology}
-\section{Geographically Temporally Weighted Regression}
+\section{Methodology}
 \label{sec:method}
 
 \input{sections/methods002}
