--- a/sections/studyarea001.tex
+++ b/sections/studyarea001.tex
@@ -1,6 +1,8 @@
 %\section{Study Area Background}
 %\label{subsec:study_area}
 
+\subsection{Choushui River Fluvial Plain}
+
 The selected study area is the Choushui River Fluvial Plain (CRFP), located in the western region of central Taiwan. It covers approximately 2000 \text{$\mathrm{km}^2$} and overlaps with the administrative areas of Changhua and Yunlin counties. The fluvial plain is bounded to the east by the Douliu Hills and the Bagua Tableland, where the altitude is around 100 to 150 m, and decreases quickly to several meters above sea level towards the Taiwan Strait to the west. The northern and southern boundaries are marked by the Wu River and the Beigang River, respectively (\Cref{fig:studyarea}).
 
 The sedimentary materials in the CRFP result from the mechanical weathering of rock formations in the upstream watershed, including slate, quartzite, shale, sandstone, and mudstone \citep{RN17, RN47}. Based on hydrogeological characteristics, the fluvial plain is divided into three sections, namely proximal, middle, and distal fans \citep{RN46}. The proximal fan, close to the hills, is mainly composed of highly permeable materials such as gravel and coarse sand. Towards the middle and distal fans, the material becomes a mix of coarse and fine grains, leading to low permeability. This is evident in the hydrogeological profile ($\text{A--A'}$), which runs parallel to the Choushui River (\Cref{fig:studyarea}). This profile was conceptually constructed by the Geological Survey and Mining Management Agency (GSMMA) of Taiwan based on borehole logging from the Haifeng site on the west to the Chukou site on the east.
