--- a/sections/methods002.tex
+++ b/sections/methods002.tex
@@ -1,7 +1,56 @@
 % \section{Methodology}
 
-%\subsection{SBAB-InSAR Processing}
-%\label{subsec:sbas}
+\subsection{SBAS-InSAR time series processing}
+\label{subsec:sbas}
+
+This study derived cumulative vertical displacement from an 8-year dataset of Sentinel-1 SAR images \text{(2016 - 2024)}, acquired from both ascending and descending orbits; the image properties are summarized in \Cref{tab:sentinel1_info}. First, the images from each acquisition orbit were processed separately applying the \textbf{\textit{hyp3-isce2}} plugin, part of the Hybrid Pluggable Processing Pipeline (HyP3) \citep{hyp3-isce2}. For interferogram formation, each SAR image was paired with up to four subsequent consecutive images to minimize temporal decorrelation. Next, each image pair was analyzed using the InSAR Scientific Computing Environment 2 (ISCE2) TOPS workflow, which sequentially performs burst-level coregistration of Single Look Complex (SLC) images, interferogram generation, waterbody masking and topographic phase correction with the Copernicus GLO-30 DEM, phase unwrapping via the SNAPHU algorithm, and geocoding to produce unwrapped interferograms suitable for further time-series InSAR analysis. A detailed description of the ISCE2 workflow is available in \citep{isce2_rosen, tops, nesd_tops}.
+
+Subsequently, a time-series analysis was conducted on the unwrapped interferograms from ascending and descending orbits separately using the small baseline subset approach, provided by Miami InSAR Time-series software (MintPy) \citep{mintpy_yunjun}. The valid interferogram network was formed through a two-stage selection. The minimum spanning tree (MST) \citep{mst_perissin} first identified the most coherent interferograms to connect all SAR images, by using the inverse of the average spatial coherence of all interferograms as weight. After this, any interferograms not included in the MST were excluded if their average spatial coherence was lower than $\text{0.3}$. After network formation, the optimal values of the interferometric phase timeseries were estimated through a network inversion using the inverse of the phase variance as weight \citep{networkinverse_var}. The temporal coherence, as a product of the network inversion process, was utilized to evaluate the reliability of the estimated value at each pixel \citep{temporal_coherence}. Pixels with temporal coherence ($\gamma_\textit{temp}$) below 0.65 were then masked from further processing. Regarding atmospheric correction, the tropospheric delay components were removed based on the empirical linear relationship between InSAR phase delay and elevation \citep{height_correlation}. All interferograms from both ascending and descending orbits were referenced to a single stable point, which was located far from the subsiding area (\Cref{fig:insar_leveling_a}). Finally, the line-of-sight deformation (${d_\textit{LOS}}$) was decomposed into the east-west (${d_\textit{E-W}}$) and vertical (${d_\textit{U}}$) components, assuming the deformation in north-south direction (${d_\textit{N-S}}$) was negligible. The decomposition employed the incidence angles ($\theta$) and satellite heading angles ($\alpha$) from both ascending ($\textit{asc}$) and descending ($\textit{desc}$) images \citep{hanssen_book}:
+
+\begin{equation}
+	\begin{bmatrix}
+		d_{\textit{U}} \\
+		d_{\textit{E-W}}
+	\end{bmatrix}
+	=
+	\begin{bmatrix}
+		\cos(\theta^{\text{asc}}) & \sin(\theta^{\text{asc}}) \cos(\alpha^{\text{asc}}) \\
+		\cos(\theta^{\text{desc}}) & \sin(\theta^{\text{desc}}) \cos(\alpha^{\text{desc}})
+	\end{bmatrix}^{-1}
+	\begin{bmatrix}
+		d_{\textit{LOS}}^{\text{asc}} \\
+		d_{\textit{LOS}}^{\text{desc}}
+	\end{bmatrix}.
+	\label{eq:decomposition} %<-- Correct placement and spelling
+\end{equation}
+
+
+Validation of the vertical displacements was performed against precise leveling survey, with benchmarks locations shown in \Cref{fig:studyarea}. First, reliable measurement points ($\gamma_\textit{temp} \ge 0.65$) within a 200 m radius of each benchmark were selected. Average velocities were then derived for these points from both the InSAR and annual leveling survey time series, calculated as the slope of the best-fitting line to their respective displacement time series. Such a comparison based on rates was required due to the different temporal sampling intervals of the two datasets \Cref{fig:insar_leveling}.
+
+\begin{figure}[H]
+	\centering
+	
+	% --- Left Subplot (Figure A) ---
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\framebox{\rule{0pt}{8cm}\rule{\textwidth}{0pt}}
+		\caption{} % <-- ADD THIS BACK. An empty caption just creates the "(a)".
+		\label{fig:insar_leveling_a} % <-- ADD THIS BACK. Give it a unique label.
+	\end{subfigure}
+	\quad
+	% --- Right Subplot (Figure B) ---
+	\begin{subfigure}[b]{0.3\textwidth}
+		\centering
+		\framebox{\rule{0pt}{8cm}\rule{\textwidth}{0pt}}
+		\caption{} % <-- ADD THIS BACK. This will create the "(b)".
+		\label{fig:insar_leveling_b} % <-- ADD THIS BACK. Give it another unique label.
+	\end{subfigure}
+	
+	% --- Main Caption for the Entire Figure ---
+	% You can now refer to (a) and (b) in your main caption if you wish.
+	\caption{Comparison of InSAR results and leveling data. (a) The results from InSAR processing. (b) The ground truth data from leveling surveys.}
+	\label{fig:insar_leveling} % This label is for the whole figure.
+\end{figure}
 
 %\subsection{Geographically Temporally Weighted Regression}
 %\label{subsec:gtwr}
@@ -10,169 +59,30 @@
 % ================================================================================
 
 %\subsubsection{Model Calibration}
-\subsection{Model Calibration}
-\label{subsec:gtwr_calib}
-%
-% ========================================
-% Section: Recap GWR concept
-% ========================================
-%
-Before discussing the GTWR model, it is useful to review the fundamental concepts of ordinary least squares (OLS) regression and geographically weighted regression (GWR). The OLS models the relationship between a dependent variable and one or more predictors, under the assumption that the relationships being modeled are spatially stationary, expressed as:
+\subsection{Geographically Weighted Regression}
+\label{subsec:gwr_method}
 
-\begin{equation}
-	y_i = \sum_{k=0}^{p} \beta_k x_{ik} + \varepsilon_i
-	\label{eq:ols}
-\end{equation}
-
-\noindent where \(y_i\) denotes the dependent variable at the \(i\)-th location; \(x_{ik}\) represents the independent variables (or predictors), with \(x_{i0} = 1\) for the intercept \(\beta_0\); \(\beta_k\) indicates the regression coefficient corresponding to the \(k\)-th predictor; \(\varepsilon_i\) is the random error at the \(i\)-th location, and \(p\) is the number of independent variables (excluding the intercept).
-%
-The OLS method assigns a single set of coefficients to all observations regardless of their geographical locations, which deliberately neglects potential spatial variation and can cause model misspecification \citep{mgwr_book_2017}.
-%
-% ========================================
-% Section: Recap GWR concept
-% ========================================
-%
-The GWR approach allows the regression coefficients of the predictors to vary at different locations, thereby capturing local variations \citep{brunsdon1996, fotheringham2002geographically}. The GWR is formulated as follows:
-
-\begin{equation}
-y_i = \sum_{k=0}^{p} \beta_k(u_i, v_i) x_{ik} + \varepsilon_i
-\label{eq:gwr}
-\end{equation}
+this research apply the geographically time-slice weighted regression to model the relationship between the differential displacement from MLCW and InSAR. because the traditional or global regression assumes that the relationship between the response and predictor variables are constant over space and time. this assumption is relaxed in GWR by allowing the parameters to vary spatially. 
 
 
-% ========================================
-% Section: Introduce GTWR
-% ========================================
-
-%\(x_{i0} = 1\) for the intercept, \((u_i, v_i)\) are the spatial coordinates of the \(i\)-th point, \(\beta_k(u_i, v_i)\) and \(x_{ik}\) are the coefficient and observed value for the \(k\)-th independent variable, respectively; \(\varepsilon_i\) is the random error, and \(p\) is the number of independent variables (excluding the intercept). 
-
-\noindent where the coefficients appear similar to those in an OLS model. However, the key difference is that the GWR coefficients \(\beta_k\) are indexed by the spatial coordinates \((u_i, v_i)\) of the \(i\)-th point. \Cref{eq:gwr} indicates that the relationships between dependent and independent variables are spatially nonstationary, which provides a more realistic model than the global regression, which assumes spatially constant relationships. However, the environmental quantities not only exhibit spatial but also temporal relationships. Therefore, \citet{huang2010geographically} introduced the GTWR model to account for spatiotemporal nonstationarity. The general form of the GTWR model can be expressed as:
-
-\begin{equation}
-y_i = \sum_{k=0}^{p} \beta_k(u_i, v_i, t_i) x_{ik} + \varepsilon_i
-\label{eq:gtwr}
-\end{equation}
-
-The GTWR terms mirror those in GWR but add the temporal dimension $t_i$. In this study, the compaction within a specific aquifer layer is modeled as a function of the corresponding surface deformation derived from SBAS-InSAR. The general GTWR model from \Cref{eq:gtwr} is therefore specified as:
-%
-\begin{equation}
-	\text{MLCW}_{i,n}(t) = \beta_0(u_i, v_i, t) + \beta_1(u_i, v_i, t) \cdot \text{InSAR}_i(t) + \varepsilon_i
-	\label{eq:gtwr_mlcw_insar}
-\end{equation}
-%
-\noindent where the dependent variable, \(\text{MLCW}_{i,n}(t)\), is the compaction in layer \(n\) at location \(i\), and the independent variable, \(\text{InSAR}_i(t)\), is the corresponding InSAR-derived surface deformation. The spatiotemporally varying terms \(\beta_0\) and \(\beta_1\) represent the local intercept and the dynamic coefficient linking the two variables, respectively.
-%
-The GTWR model is calibrated based on the assumption that observations closer to the $i$-th point in spatiotemporal coordinate system have greater influence on the estimation of $\beta_k(u_i, v_i, t_i)$ than more distant ones. The estimated parameters $\hat{\boldsymbol{\beta}}(u_i, v_i, t_i)$ can be obtained by:
-
-\begin{equation}
-\hat{\boldsymbol{\beta}}(u_i, v_i, t_i) = (\mathbf{X}^T\mathbf{W}(u_i, v_i, t_i)\mathbf{X})^{-1}\mathbf{X}^T\mathbf{W}(u_i, v_i, t_i) \mathbf{y}
-\label{eq:coeff_gtwr}
-\end{equation}
-
-% =================================================
-% emphasize the weight matrix construction
-% =================================================
-\noindent where $\mathbf{W}(u_i, v_i, t_i)$ is a diagonal matrix with elements denoting the spatiotemporal weights assigned to the observations associated with the $i$-th point. The weights are usually obtained through a kernel function that implement either a fixed bandwidth (using specific distance thresholds) or an adaptive bandwidth (seeking an optimal number of nearest observations), as described by \citet{Paez2002Framework}. A fixed bandwidth can introduce estimation bias dependent on observation density. More specifically, in regions with dense observations, an excessive number of neighbors might lead to over-smoothing, while an insufficient number is more likely to cause uncertain estimates. The adaptive bandwidth ensures each regression point is informed by exactly the same number of neighbors, regardless of data density. Due to the sparse distribution of the MLCW stations across the study area, this study employed the adaptive bi-square kernel function, defined as:
-
-\begin{equation}
-W_{ij} = \begin{cases} 
-	[1 - (d^{ST}_{ij}/h_i)^2]^2, & \text{if } d^{ST}_{ij} < h_i \\
-	0, & \text{otherwise}
-\end{cases}
-\label{eq:bisquare}
-\end{equation}
-
-\noindent where $d^{ST}_{ij}$ denotes the spatiotemporal distances between location $i$ and $j$, and $h_i$ is the adaptive bandwidth. Since spatial and temporal distances are measured in different units and exhibit different scale effects, \citet{Wu2014Geographically} proposed an integrated formulation, expressed as:
-
-\begin{equation}
-\begin{cases}
-	d_{ij}^{\text{ST}} = \lambda d_{ij}^{\text{S}} + (1-\lambda) d_{ij}^{\text{T}} + 2 \sqrt{\lambda (1-\lambda) d_{ij}^{\text{S}} d_{ij}^{\text{T}}} \cos(\xi), & t_j < t_i \\
-	d_{ij}^{\text{ST}} = \infty, & t_j > t_i
-\end{cases}
-\label{eq:st_dist}
-\end{equation}
-
-\noindent where $t_i$ and $t_j$ are sampled times at locations $i$ and $j$; \( \lambda \text{ and } \xi \in [0, \pi] \) are adjustment parameters. Noticeably, \Cref{eq:st_dist} implies that the GTWR model will simplify to GWR (\cref{eq:gwr}) when $\lambda=1$, and space-time interaction effects reach their maximum when $\xi=0$. In practice, the bandwidths $h_i$, $\lambda$, and $\xi$ can be determined and optimized using a corrected version of the Akaike Information Criterion (AICc) \citep{Hurvich2002_AICc}, defined as:
-
-\begin{equation}
-	\text{AICc} = 2n \log_e (\hat{\sigma}) + n \log_e (2\pi) + n \left\{ \frac{n + \text{tr}(\mathbf{S})}{n - 2 - \text{tr}(\mathbf{S})} \right\}
-\label{eq:aicc}
-\end{equation}
-
-\noindent where \(n\) is the sample size, \(\hat{\sigma}\) is the estimated standard deviation of the error term, and \(\text{tr}(\mathbf{S})\) denotes the trace of the hat matrix $\mathbf{S}$. The hat matrix $\mathbf{S}$ is defined as:
-
-\begin{equation}
-	\mathbf{s}_i^T = \mathbf{x}_i^T(\mathbf{X}^T \mathbf{W}(u_i, v_i, t_i) \mathbf{X})^{-1}\mathbf{X}^T \mathbf{W}(u_i, v_i, t_i)
-	\label{eq:hat_matrix_row}
-\end{equation}
-
-\noindent where $\mathbf{s}_i^T$ is the \textit{i}-th row of the hat matrix $\mathbf{S}$.
+%Before discussing the GTWR model, it is useful to review the fundamental concepts of ordinary least squares (OLS) regression and geographically weighted regression (GWR). The OLS models the relationship between a dependent variable and one or more predictors, under the assumption that the relationships being modeled are spatially stationary, expressed as:
 %
 %\begin{equation}
-%	\mathbf{S} = \{S_{ij}\}, \text{ where } S_{ij} = \mathbf{x}_i^T(\mathbf{X}^T \mathbf{W}(u_i, v_i, t_i) \mathbf{X})^{-1}\mathbf{X}^T \mathbf{W}(u_i, v_i, t_i)
-%	\label{eq:hat_matrix}
+%	y_i = \sum_{k=0}^{p} \beta_k x_{ik} + \varepsilon_i
+%	\label{eq:ols}
 %\end{equation}
 %
-%\noindent  where $\mathbf{x}_i^T$ represents the values of independent variables at the $i$-th point.
-The hat matrix $\mathbf{S}$ transforms observed values into fitted values through spatiotemporal weightings, as in $\hat{\mathbf{y}} = \mathbf{S}\mathbf{y}$, with its trace representing the effective number of parameters in the model \citep{hat_matrix}. The detailed information of these components can be found in \citet{fotheringham2002geographically}.
-
-% In this study, the parameters $\lambda$ and $\xi$ were set to $0.05$ and $0$, respectively, assuming that the temporal effect is dominant and space-time interactive effects are maximized. This configuration constrains the optimization process to focus on determining the optimal bandwidths $h_i$, thereby enhancing the computational efficiency during the calibration procedure.
-
-% ================================================================================
-% ================================================================================
-
-%\subsubsection{Model Validation}
-
-\subsection{Model Validation}
-\label{subsec:gtwr_validation}
-
-The predictive reliability of the GTWR model was assessed using leave-one-out cross-validation (LOOCV) to evaluate model performance at unsampled locations. This validation approach systematically excludes individual observations to simulate prediction scenarios at unknown points within the observation network, generating time series predictions that can be directly compared with observed measurements.
+%\noindent where \(y_i\) denotes the dependent variable at the \(i\)-th location; \(x_{ik}\) represents the independent variables (or predictors), with \(x_{i0} = 1\) for the intercept \(\beta_0\); \(\beta_k\) indicates the regression coefficient corresponding to the \(k\)-th predictor; \(\varepsilon_i\) is the random error at the \(i\)-th location, and \(p\) is the number of independent variables (excluding the intercept).
+%%
+%The OLS method assigns a single set of coefficients to all observations regardless of their geographical locations, which deliberately neglects potential spatial variation and can cause model misspecification \citep{mgwr_book_2017}.
+%%
+%% ========================================
+%% Section: Recap GWR concept
+%% ========================================
+%%
+%The GWR approach allows the regression coefficients of the predictors to vary at different locations, thereby capturing local variations \citep{brunsdon1996, fotheringham2002geographically}. The GWR is formulated as follows:
 %
-For each aquifer layer dataset, the validation procedure systematically removed individual MLCW observations, treating each excluded point as an unknown prediction target. The GTWR model was then applied to the remaining $(n-1)$ observations using the optimal spatiotemporal parameters (bandwidth, $\lambda$, and $\xi$) determined during the calibration phase. The excluded observation served as the regression point, enabling the model to generate complete predicted time series at that location based solely on information from surrounding monitoring stations.
-%
-This approach simulates realistic operational conditions where subsurface compaction behavior are estimated at locations without monitoring wells. The predicted time series for each excluded observation provides a comprehensive dataset for accuracy assessment, enabling direct comparison between modeled and observed compaction values across the entire monitoring period.
-%
-Model performance was quantified using the following accuracy metrics calculated for each validation station:
-
-\begin{align}
-	\text{MAE}_i &= \frac{1}{T}\sum_{t=1}^{T} |y_{i,t} - \hat{y}_{\neq i,t}| \label{eq:mae_station}\\
-	\text{RMSE}_i &= \sqrt{\frac{1}{T}\sum_{t=1}^{T} (y_{i,t} - \hat{y}_{\neq i,t})^2} \label{eq:rmse_station}
-\end{align}
-
-\noindent where $T$ represents the temporal length of each monitoring record, $y_{i,t}$ denotes observed compaction values, and $\hat{y}_{\neq i,t}$ represents corresponding predictions from the leave-one-out cross-validation.
-%
-This iterative process continued until all monitoring stations functioned as validation points, yielding station-specific accuracy assessments across the entire monitoring network.
-
-%because I want to evaluate the reliability of the model when performing prediction at unsampled points located between the observations, I applied the very classical method leave-one-out cross-validation. the formulation for this process is as follows (add a formula here)
-%
-%for each data set of each aquifer, I remove one observation, assuming that we are blind about the information of that point, then I run the GTWR with remaining observations, using the parameters obtained from the previous calibration step. the drop-out point will be used as the regression point for this model run. the result will return the predicted time series of the regression point. here, I can compare the difference betwen the true values of this observation and the its predicted values from the model (performed without that observation). because this is a time series, I can calculate evaluation metrics with this, such as mean absolute error (MAE), root mean squared error (RMSE). then we put that point back, take out another, and repeat the process until all observations are used. after all, I have a set of evaluation metrics for each observation, we can calculate the average of them to evaluate the reability of the models.
-
-% ================================================================================
-% ================================================================================
-
-%\subsubsection{Posterior Uncertainty Assessment}
-\subsection{Posterior Uncertainty Assessment}
-
-\label{subsec:gtwr_prediction}
-
-When the optimal bandwidth is obtained through the calibration process, the fitted value $\hat{\mathbf{y}}$ at any unsampled location can be calculated using the hat matrix relationship as previously mentioned. The prediction error variance for each fitted value $\hat{\mathbf{y}}$ is defined as:
-
-\begin{equation}
-	\sigma_i^2 = \hat{\sigma}^2 \left(1 + \mathbf{x}_i^T (\mathbf{X}^T \mathbf{W}(u_i, v_i, t_i) \mathbf{X})^{-1} \mathbf{x}_i \right)
-	\label{eq:gtwr_variance}
-\end{equation}
-
-\noindent where $\hat{\sigma}^2$ represents the overall model error variance, which is defined as:
-
-\begin{equation}
-	\hat{\sigma}^2 = \frac{\sum_{i=1}^{N} (y_i - \hat{y}_i)^2}{n - 2\text{tr}(\mathbf{S}) + \text{tr}(\mathbf{S}^T \mathbf{S})}
-	\label{eq:model_error_variance}
-\end{equation}
-
-The first term in \Cref{eq:gtwr_variance} accounts for the intrinsic model residual variance, while the second term assesses the additional uncertainty that arises when estimating local relationships from limited neighboring observations.
-
-% ================================================================================
-% ================================================================================
-
-%\subsection{Curve Fitting}
-%\label{subsec:curve_fit}
+%\begin{equation}
+%y_i = \sum_{k=0}^{p} \beta_k(u_i, v_i) x_{ik} + \varepsilon_i
+%\label{eq:gwr}
+%\end{equation}
