--- a/sections/results001.tex
+++ b/sections/results001.tex
@@ -1,7 +1,7 @@
-\subsection{Model Results and Interpretation}
-
-\subsection{The Aquifer's "Personality": Mapping the Field of Subsurface Sensitivity }
-
-\subsection{Decomposing the "Symphony": Identifying Dominant Modes of Behavior (EOF Analysis)}
-
-\subsection{Validating the Narrative: Assessing Model Reliability}
+%\subsection{Model Results and Interpretation}
+%
+%\subsection{The Aquifer's "Personality": Mapping the Field of Subsurface Sensitivity }
+%
+%\subsection{Decomposing the "Symphony": Identifying Dominant Modes of Behavior (EOF Analysis)}
+%
+%\subsection{Validating the Narrative: Assessing Model Reliability}
